Update YouTube video URL in index.html

--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@ Um jogo criativo contra o tempo, <br>onde cada bola precisa ser validada <br>pel
   <img src="assets/Repolho_Roqueiro-Transparente (1).png" id="IMG_3" class="gwd-img-54su">
   <img src="assets/Faixa_Repolho_Nervoso-removebg-preview (1).png" id="IMG_4" class="gwd-img-17nk">
   <gwd-youtube id="gwd-youtube_6" video-url="https://youtu.be/YBjuy3MfWOc" annotations="" related="" title="Topete" class="gwd-youtube-1u6s gwd-youtube-13ob gwd-youtube-ona0 gwd-youtube-3k6c gwd-youtube-1pbp gwd-youtube-gla7 gwd-youtube-kqgr gwd-youtube-1s47 gwd-youtube-t5b9"></gwd-youtube>
-  <gwd-youtube id="gwd-youtube_7" video-url="https://youtu.be/HS6V_QZ_qe0" class="gwd-youtube-1u6s gwd-youtube-13ob gwd-youtube-ona0 gwd-youtube-3k6c gwd-youtube-1pbp gwd-youtube-gla7 gwd-youtube-kqgr gwd-youtube-1s47 gwd-youtube-reie"></gwd-youtube>
+  <gwd-youtube id="gwd-youtube_7" video-url="https://youtu.be/AtmdSS79fNI" class="gwd-youtube-1u6s gwd-youtube-13ob gwd-youtube-ona0 gwd-youtube-3k6c gwd-youtube-1pbp gwd-youtube-gla7 gwd-youtube-kqgr gwd-youtube-1s47 gwd-youtube-reie"></gwd-youtube>
   <span class="gwd-span-pygt"><span class="gwd-span-1fv2">Repolho Nervoso Fashion</span><br></span><span class="gwd-span-19rx"><span class="gwd-span-17s0">Repolho Nervoso Bikes.</span><br><span class="gwd-span-16ms">Não é só uma bike. <br>É um estilo de pedal.</span><br><br></span>
   <img src="assets/Garotas Indagando 2.png" id="Garotas_Indagando_2" class="gwd-img-7gm0">
   <img src="assets/Repolho_Nervoso_Bike-removebg-preview 1.png" id="Repolho_Nervoso_Bike-removebg-preview_1" class="gwd-img-1elf">
